long username overflow fix, inactive game continuation fix

--- a/imports/client/templates/leaderboard/leaderboard.css
+++ b/imports/client/templates/leaderboard/leaderboard.css
@@ -7,3 +7,9 @@
 #join-button {
     font-size: 2em;
 }
+
+.username-id{
+    min-width: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
